Fix spacing issues

--- a/Design-Assignment-1/css/layout.css
+++ b/Design-Assignment-1/css/layout.css
@@ -1,5 +1,5 @@
 .main-wrapper {
-  width: 100%;
+  min-width: 1002px;
 }
 
 .container {
